--- a/index.html
+++ b/index.html
@@ -388,6 +388,12 @@ a{
 });
 
     </script>
+    <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("sw.js");
+}
+    </script>
 </body>
 </html>
+
 
